# process_sim

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  context.md  diffusion_results.csv  heat2d_result.csv
include/: Grid1D.hpp  Grid2D.hpp  Simulator.hpp  global.h
include/mesh/: GmshReader.hpp  Mesh.hpp
include/solvers/: HeatSolver2D.hpp
meshes/: square_100x100.msh  square_tri.msh
src/: Simulator.cpp  heat2d_example.cpp  main.cpp
src/mesh/: GmshReader.cpp
src/solvers/: HeatSolver2D.cpp
test/: test_eigen.cpp
tools/: plot_heat2d.py
